// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should match snapshot 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputWithClipboard"
    />
    <div
      data-mockid="MessageElement"
    />
  </div>
</div>
`;

exports[`TextInput should match snapshot, when readonly is false 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputComponent"
    />
    <div
      data-mockid="MessageElement"
    />
  </div>
</div>
`;

exports[`TextInput should match snapshot, when readonly is true 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputWithClipboard"
    />
    <div
      data-mockid="MessageElement"
    />
  </div>
</div>
`;
